--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 ahash = "0.8.6"
-bevy = "0.12.0"
+bevy = "0.12.1"
 bevy_egui = "0.23.0"
 chrono = "0.4.31"
 logos = "0.13.0"
@@ -22,3 +22,6 @@ opt-level = 1
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
 opt-level = 3
+
+[lints]
+clippy.useless_format = "allow"
