--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,31 @@
+
 [package]
 name = "bevy_dev_console"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["builtin-parser"]
+
+builtin-parser = ["dep:logos"]
 
 [dependencies]
-ahash = "0.8.6"
 bevy = "0.12.1"
-bevy_egui = "0.23.0"
+bevy_egui = "0.24.0"
 chrono = "0.4.31"
-logos = "0.13.0"
+instant = "0.1.12"
 tracing-log = "0.2.0"
 tracing-subscriber = "0.3.18"
+
+logos = { version = "0.13.0", optional = true }
+
+[target.'cfg(target_os = "android")'.dependencies]
+android_log-sys = "0.3.0"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1.7"
+tracing-wasm = "0.2.1"
 
 
 # Enable a small amount of optimization in debug mode
@@ -25,3 +38,4 @@ opt-level = 3
 
 [lints]
 clippy.useless_format = "allow"
+rust.missing_docs = "warn"
