--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -13,19 +13,19 @@ rustflags = ["-Clink-arg=-fuse-ld=lld"]
 rustflags = [
     "-C",
     "link-arg=-fuse-ld=/usr/local/opt/llvm/bin/ld64.lld",
-    "-Zshare-generics=y",
+    # "-Zshare-generics=y",
 ]
 
 [target.aarch64-apple-darwin]
 rustflags = [
     "-C",
     "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld",
-    "-Zshare-generics=y",
+    # "-Zshare-generics=y",
 ]
 
 [target.x86_64-pc-windows-msvc]
 linker = "rust-lld.exe"
-rustflags = ["-Zshare-generics=n"]
+# rustflags = ["-Zshare-generics=n"]
 
 # Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
 # In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
