--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [features]
 default = ["builtin-parser"]
 
-builtin-parser = ["dep:logos", "dep:kinded"]
+builtin-parser = ["dep:logos"]
 
 [dependencies]
 bevy = "0.12.1"
@@ -18,9 +18,8 @@ tracing-log = "0.2.0"
 tracing-subscriber = "0.3.18"
 web-time = "0.2.4"
 
-# built-in parser
+# builtin-parser feature
 logos = { version = "0.13.0", optional = true }
-kinded = { version = "0.3.0", optional = true }
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_log-sys = "0.3.0"
