--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@
 name = "bevy_dev_console"
 version = "0.1.0"
 edition = "2021"
+exclude = ["assets/", "docs/", ".github/"]
+keywords = ["bevy", "console", "development", "source"]
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
