--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ web-time = "0.2.4"
 
 # builtin-parser features
 logos = { version = "0.13.0", optional = true }
+const_format = "0.2.32"
 
 [dev-dependencies]
 bevy = "0.12.1"
